# task-runner

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  example_task_processor.py  example_taskops.py  pyproject.toml  readme.md  requirements.txt  setup.py
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: branch-protection.yml  ci.yml  python-tests.yml
config/: sample_tasks.yaml
data/: tasks.db
k8s/: configmap.yaml  deployment.yaml  storage.yaml
sample/: sample_task.yaml
src/: main.py
src/executor/: task_executor.py
src/models/: task.py
task_processor/: __init__.py  __main__.py
task_processor/core/: executor.py  models.py  scheduler.py
task_processor/core/executor/: task_executor.py
task_processor/core/models/: config.py  database.py  task.py
task_processor/core/scheduler/: task_scheduler.py
task_processor/plugins/: base.py
task_processor/plugins/mysql/: plugin.py
task_processor/utils/: config_loader.py  logging.py
task_runner/: __init__.py  __main__.py
task_runner/core/: executor.py  models.py  scheduler.py
task_runner/core/executor/: task_executor.py
task_runner/core/models/: config.py  database.py  task.py
task_runner/core/scheduler/: task_scheduler.py
task_runner/plugins/: base.py
task_runner/plugins/mysql/: plugin.py
task_runner/utils/: config_loader.py  logging.py
tests/: conftest.py  test_task_processor.py  test_task_runner.py
