[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "task-processor"
version = "0.1.0"
description = "A flexible and extensible task processing system"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["task", "scheduler", "automation", "cron"]
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.0.0",
    "schedule>=1.2.2",
    "loguru>=0.7.3",
    "pyyaml>=6.0.1",
    "python-dateutil>=2.8.2",
    "typing-extensions>=4.9.0",
]

[project.urls]
Homepage = "https://github.com/sharik709/task-runner"
Issues = "https://github.com/sharik709/task-runner/issues"

[project.scripts]
task-processor = "task_runner.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.9.0",
    "flake8>=7.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[tool.setuptools]
packages = ["task_runner"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=task_runner --cov-report=term-missing"
