[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taskops"
version = "0.1.6"
description = "A flexible task scheduling and execution framework"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sharik Shaikh", email = "sharik709@gmail.com" }
]
dependencies = [
    "pydantic>=2.0.0",
    "schedule>=1.2.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
keywords = ["task", "scheduler", "automation", "process"]

[project.urls]
Homepage = "https://github.com/sharik709/task-processor"
Issues = "https://github.com/sharik709/task-processor/issues"

[project.scripts]
taskops = "task_processor.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.9.0",
    "flake8>=7.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

mysql = [
    "mysql-connector-python>=8.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
task_processor = "task_processor"

[tool.setuptools.packages]
find = {}

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
python_files = ["test_*.py"]
addopts = "--cov=task_processor --cov-report=term-missing"
pythonpath = [".", "task_processor"]
testpaths = ["tests"]
